# Automotive_Infotainment_Simulation

./: BluetoothController.cpp  BluetoothController.h  CMakeLists.txt  MediaController.cpp  MediaController.h  NavigationController.cpp  NavigationController.h  README.md  VehicleController.cpp  VehicleController.h  build_log.txt  build_log_utf8.txt  main.cpp
components/cluster/: FuelGauge.qml  InstrumentCluster.qml  RPMGauge.qml  TempGauge.qml  WarningLights.qml
components/infotainment/: MediaPlayer.qml
